// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<InputToggle /> > Controlled story renders snapshot 1`] = `
<span
  class="MuiSwitch-root MuiSwitch-sizeMedium efvmhqy0 css-r9pf8c-MuiSwitch-root-Toggle"
>
  <span
    class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-1wh25oe-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
  >
    <input
      checked=""
      class="PrivateSwitchBase-input MuiSwitch-input css-1p3z7et-MuiSwitchBase-root"
      type="checkbox"
      value="On"
    />
    <span
      class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </span>
  <span
    class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;

exports[`<InputToggle /> > Default story renders snapshot 1`] = `
<span
  class="MuiSwitch-root MuiSwitch-sizeMedium efvmhqy0 css-yoh8cq-MuiSwitch-root-Toggle"
>
  <span
    class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-1wh25oe-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
    width="62"
  >
    <input
      aria-label="Input Toggle"
      class="PrivateSwitchBase-input MuiSwitch-input css-1p3z7et-MuiSwitchBase-root"
      type="checkbox"
      value="Off"
    />
    <span
      class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
    />
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </span>
  <span
    class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
  />
</span>
`;
